# DockerNet

./: CMakeLists.txt  Dockerfile.master  Dockerfile.slave_letras  Dockerfile.slave_numeros  README.md  Readme.md  docker-compose.yml  exemplo_uso.md  test.sh
client/: CMakeLists.txt  client_app.cpp  client_app.h  main.cpp
cliente/: cliente  cliente.cpp  teste.txt
escravo1/: Dockerfile  escravo1.cpp
escravo2/: Dockerfile  escravo2.cpp
include/: httplib.h
mestre/: Dockerfile  mestre.cpp
src/: CMakeLists.txt
src/master/: main.cpp  master_server.cpp  master_server.h
src/slave_letras/: main.cpp  slave_letras.cpp  slave_letras.h
src/slave_numeros/: main.cpp  slave_numeros.cpp  slave_numeros.h
test_files/: sample1.txt  sample2.txt
